# roxidoExample

./: .Rbuildignore  .gitignore  DESCRIPTION  INSTALL  LICENSE  NAMESPACE  NEWS  justfile  roxido-update.txt
R/: myrnorm.R  not_exported.R  zero.R
bindings/: generate
inst/: AUTHORS
man/: roxidoExample-package.Rd  zero.Rd
src/: abort_shim.c  r_init_shim.c  shim.c  shims.c
src/rust/: .gitignore  Cargo.toml  build.rs
src/rust/rbindings/: Cargo.toml  generate
src/rust/rbindings/src/: lib.rs
src/rust/roxido/: .gitignore  Cargo.toml  build.rs
src/rust/roxido/src/: lib.rs  r.rs  rbindings.rs
src/rust/roxido_faer/: Cargo.toml
src/rust/roxido_faer/src/: lib.rs
src/rust/roxido_macro/: Cargo.toml
src/rust/roxido_macro/src/: lib.rs
src/rust/src/: dist.rs  lib.rs
tools/: build_rust_library.R  configure.R
